v3.4.8 (XXXX-XX-XX)
-------------------

* Fixed internal issue #4378: fix bug in MoveShard::abort which causes a
  duplicate entry in the follower list.

* Fixed issue #9654: honor value of `--rocksdb.max-write-buffer-number` if it
  is set to at least 9 (which is the recommended value). Ignore it if it is
  set to a lower value than 9, and warn the end user about it.

  Previous versions of ArangoDB always silently ignored the value of this setting 
  and effectively hard-coded the value to 9.

* Fixed cut'n'pasting code from the documentation into arangosh.

* Refactor maintenance to use a TakeoverShardLeadership job. This fixes a bug
  that a shard follower could have set the wrong leader for the shard locally.

* Fixed issue #9679: improved error message for FULLTEXT function invocation failures.

* Added resign leadership job to supervision.

* Fixed issue #9612: Concurrent Writes leads to data loss in ArangoSearch/Views.

* Keep followers in sync if the old leader resigned and stopped writes.

* Abort a FailedLeader job when its _to_ server fails.

* Re-added warning for kernel setting "overcommit_memory=2" if jemalloc is also enabled.

* Significantly reduced "random" 1 second delays in some arangosearch DDL operations.

* Decreased unnecessary wait times for agency callbacks in case they were
  called earlier than expected by main thread.

* Upgraded arangodb starter version to 0.14.12

* Fixed internal issue #3680 by adding two new options to make the server more secure:
  - `--foxx.api`: set to false disables Foxx management API
  - `--foxx.store`: set to false disables Foxx UI

* updated arangosync to 0.6.5

* Fixed issue #9459: Optimization rule remove-collect-variables does not KEEP all necessary data.

* Fixed issue #9558: RTRIM not working as expected.

* Added gzip and encryption options to arangoimport and arangoexport.

* Added startup error for bad temporary directory setting.
